--- a/divers-project/src/main/resources/parameter.properties
+++ b/divers-project/src/main/resources/parameter.properties
@@ -11,4 +11,4 @@ message.sample2="The user #{name} has email address #{email}.
 # format spécifique
 message.sample3="The user #name# has email address #email#.
 
-#nop
+#nop..
