--- a/divers-project/src/main/resources/parameter.properties
+++ b/divers-project/src/main/resources/parameter.properties
@@ -10,3 +10,5 @@ message.sample2="The user #{name} has email address #{email}.
 
 # format spécifique
 message.sample3="The user #name# has email address #email#.
+
+# nop1
