--- a/divers-project/src/main/resources/parameter.properties
+++ b/divers-project/src/main/resources/parameter.properties
@@ -12,3 +12,5 @@ message.sample2="The user #{name} has email address #{email}.
 message.sample3="The user #name# has email address #email#.
 
 # nop1
+
+# nop2
